--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack": "~1.4.13",
     "webpack-dev-server": "~1.6.6",
     "karma-webpack": "~1.3.1",
-    "jsx-loader": "~0.12.2"
+    "jsx-loader": "~0.12.2",
+    "simulant": "~0.1.3"
   }
 }
