--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sortable-mixin",
+  "name": "react-sortable-mixin2",
   "version": "0.0.1",
   "description": "Make list like component sortable",
   "main": "index.js",
