--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "url": "https://github.com/ganeshp0001/react-sortable-mixin/issues"
   },
   "devDependencies": {
-    "karma-chai-plugins": "~0.2.3",
-    "mocha": "~2.0.1",
-    "karma": "~0.12.25",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-mocha": "~0.1.9",
-    "webpack": "~1.4.13",
-    "webpack-dev-server": "~1.6.6",
-    "karma-webpack": "~1.3.1",
     "jsx-loader": "~0.12.2",
-    "simulant": "~0.1.3"
+    "karma": "~0.12.25",
+    "karma-chai-plugins": "~0.2.3",
+    "karma-mocha": "~0.1.9",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-webpack": "~1.3.1",
+    "mocha": "~2.0.1",
+    "react": "^0.13.3",
+    "react-addons": "^0.9.1-deprecated",
+    "simulant": "~0.1.3",
+    "webpack": "~1.4.13",
+    "webpack-dev-server": "~1.6.6"
   }
 }
